deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  selector:
    app: game-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service
  labels:
    app: game-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-service
  template:
    metadata:
      labels:
        app: game-service
    spec:
      containers:
        - name: game-service
          image: gcr.io/artful-journey-444603-e1/game-service:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /api/v1/game-service/actuator/health
            initialDelaySeconds: 40
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: 8080
              path: /api/v1/game-service/actuator/health
            initialDelaySeconds: 40
            periodSeconds: 10
