lugx-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx
  namespace: lugx
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ingress-webapps"
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - path: /api/game-service
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  number: 8080
